# pipeline_API

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dashboard/: dashboard.py
src/pipeline_api/: extract.py  main.py
tests/: extract.py
